test/tests/errors/error-function-incorrect-param2.sm
// true
// false
/**/
/**/

program {
    func x() {
        "t"
    }

    output x(1);
}